bugfixing loading-interface (z-index-issues)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,7 +161,7 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 2;
+    z-index: 11;
 }
 
 .progress-bar {
